# ICCP

./: .env.example  .gitignore  MANIFEST.in  README.md  README_SUPABASE_SMOKE.md  SECURITY.md  ble_provision.py  channel_labels.py  claude.md  cli_events.py  coilshield-session-summary.md  commissioning.json  commissioning.py  console_ui.py  control.py  dashboard.py  diagnostics.py  hw_probe.py  i2c_bench.py  iccp_cli.py  iccp_electrolyte.py  iccp_runtime.py  leds.py  logger.py  main.py  pi  pi.pub  polarization_safety.py  pyproject.toml  reference.py  requirements.txt  safety.py  sensors.py  temp.py  tui.py  wet_switch.py
.claude/: ble-provisioning.md  cloud-sync.md  cross-cutting.md  onboarding.md  safety-and-control.md  sensors-and-hardware.md  tech-api.md
codegen/: README.md  gen_types.py
config/: __init__.py  argv_channels.py  argv_log_dir.py  settings.py
deploy/: bootstrap-iccp-edge.sh  dashboard.service  iccp-anode-gpio-init.service  iccp-ble-provision.service  iccp-cloud-register.service  iccp-commission-mqtt.service  iccp-telemetry-mqtt.service  iccp.service
docs/: ARCHITECTURE.md  CALIBRATION.md  DECISIONS.md  HARDWARE.md  SECURITY.md  architecture-channel-i2c-reference.md  coilshield-field-session-notes.md  desktop-app-integration.md  field-ra-and-telemetry.md  field-temp-comp-selfcal.md  galvanic-offset-calibration.md  hardware-shared-anode-bank.md  iccp-cli-reference.md  iccp-comparison.md  iccp-requirements.md  iccp-vs-coilshield.md  ina219-datasheet-notes.md  ina219-i2c-bringup.md  installation-field-wiring.md  mosfet-off-verification.md  pi-edge-deploy.md  post-v1-software-waves.md  raspberry-pi-gpio.md  reference-electrode-placement.md  roadmap-fleet-telemetry.md  stale-dashboard-feed.md  supervisor-architecture.md  watchdog-failsafe.md
files/: claude.md  coilshield-roadmap-ai.md  deployment.md  schemas.md
pi-ble/: README.md  ble_provision.py  commands_poller.py  mqtt_commissioning.py  mqtt_telemetry.py  requirements.txt  sample_latest.json  supabase_rest.py
pi_edge/: __init__.py  ble_gatt_bluez.py  cloud_conf.py  cloud_register.py  commission_mqtt_bridge.py  mqtt_line_spool.py  uuids.py
schemas/: README.md  commands.sql  device_install_codes.sql  devices.sql  events.sql  installations.sql  profiles.sql  readings.sql  tickets.sql  uplink-envelope-v1.schema.json
scripts/: anode_gates_hold_low.py  diagnose_i2c.sh
src/: ble_provisioning.py  logger.py  (+22 more)
(+90 files in other folders)
